<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-App</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="stopButtonLabel">Stop</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="action_about">über</string>
    <string name="battery_text">0 %</string>
    <string name="bluetooth_connect">verbinden</string>
    <string name="bluetooth_diconnect">trennen</string>

    <!-- Settings -->
    <string name="settings_title">Einstellungen</string>
    <string name="settings_bluetooth">Bluetooth</string>
    <string name="settings_password">Passwort</string>
    <string name="settings_password_sum">Gespeichertes Passwort ändern</string>
    <string name="settings_autolog">Auto Login</string>
    <string name="settings_autolog_sum">Beim Start automatisch mit Controller verbinden</string>
    <string name="settings_distance">Einheit</string>
    <string name="settings_battery">Akkukapazität</string>
    <string name="settings_battery_sum">Gespeicherte Akkukapazität in mAh ändern</string>
    <string name="settings_battery_wrong_input">Ungültige Eingabe! Nur Ganzzahlen möglich!</string>
    <string name="settings_advanced">Experten Ansicht</string>
    <string name="settings_controller">Controller Konfiguration &#8230;</string>
    <string name="settings_about">Info</string>
    <string name="settings_about_text">Projekt im Rahmen einer Studienarbeit zu Elektromobilität.\r\n\r\nDHBW Karlsruhe 2014\r\ne-mobility@googlegroups.com</string>

    <string name="bluetooth_text_connect">verbunden</string>
    <string name="bluetooth_text_disconnect">nicht verbunden</string>

    <string name="bluetooth_info_enabled">Bluetooth aktiviert</string>
    <string name="bluetooth_bound_bounded">Erfolgreich gekoppelt mit </string>
    <string name="settings_bluetoothNotAvailable">Bluetooth ist leider nicht möglich!</string>

    <string name="logging">Logfile</string>

    <!-- Bluetooth Info State -->
    <string name="bt_info_none">Kein Bluetooth verfügbar!</string>
    <string name="bt_info_initialized">Tippen um zu verbinden</string>
    <string name="bt_info_on">Bluetooth ist eingeschaltet</string>
    <string name="bt_info_known_device">Gerät bereits gewählt</string>
    <string name="bt_info_paired">Gerät gekoppelt</string>
    <string name="bt_info_connection_failed">Verbindung fehlgeschlagen</string>
    <string name="bt_info_acl_connected">Verbunden</string>
    <string name="bt_info_login_timeout">Login fehlgeschlagen (evtl. falsches Passwort)</string>
    <string name="bt_info_logged_in">Verbunden mit&#160;</string>
    <string name="bt_info_acl_disconnected">Verbindung beendet</string>

    <!-- DeviceProvider -->
    <string name="discovery_scanning">Suche läuft &#8230;</string>
    <string name="discovery_select">Gerät auswählen</string>
    <string name="discovery_noDevices">Kein Bluetooth-Gerät in der Nähe gefunden</string>
    <string name="discovery_noPairedDevices">Kein Pairing-Gerät verfügbar</string>
    <string name="discovery_pairedDevices">Pairing-Geräte</string>
    <string name="discovery_devices">Verfügbare Geräte</string>
    <string name="discovery_scan">Nach Geräten suchen</string>

    <!-- Dialog -->
    <string name="dialog_really_title">Achtung!</string>
    <string name="dialog_really">Möchten Sie die Aktion wirklich durchführen?</string>
    <string name="dialog_reset_tour_title">Achtung!</string>
    <string name="dialog_reset_tour">Möchten Sie die aktuelle Tour wirklich zurücksetzten?</string>
    <string name="dialog_advanced_settings_title">Achtung!</string>
    <string name="dialog_advanced_settings">Achtung Experten Ansicht!\n\rVorgenommene Änderungen wirken sich direkt auf den Controller aus. Durch einige Einstellungen ist die Verkehrszulassung nicht mehr gewährleistet.\n\r\n\rMöchten Sie die Experten Ansicht wirklich aktivieren?</string>
    <string name="dialog_disconnect_title">Achtung!</string>
    <string name="dialog_disconnect">Verbindung wirklich trennen?</string>
    <string name="dialog_deviceList_title">Gerät auswählen</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nein</string>


</resources>
