<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.studienarbeit.dhbw.e_app.Main.Main.MainActivity2Activity">

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="100"
          app:showAsAction="never" />

    <item android:id="@+id/action_bluetooth"
          android:title="@string/action_bluetooth"
          android:icon="@drawable/icon_bluetooth"
          android:orderInCategory="100"
          app:showAsAction="always"/>

</menu>
